# crampf

crampf/: .cvsignore  COPYRIGHT  INSTALL  Makefile  Makefile.am  Makefile.in  TODO  acconfig.h  autocmd.hh  autogen.sh  command.cc  commandmap.cc  commandmap.hh  configure.in  crampf.cc  crampf.hh  crampfrc-example  cvs2cl.pl  debug.hh  file.hh  generate_readme.sh  interface.cc  interface.hh  make_tarball.sh  module.hh  options.cc  options.hh  player.cc  player.hh  playlist.cc  playlist.hh  track.cc  track.hh  version_info.hh
crampf.wrongperms/: COPYRIGHT  INSTALL  Makefile  Makefile.am  Makefile.in  README  TODO  acconfig.h  autocmd.hh  command.cc  command.hh  commandmap.cc  commandmap.hh  commands.hh  configure.in  crampf.cc  crampf.hh  crampfrc-example  debug.hh  file.cc  file.hh  generate_readme.sh  interface.cc  interface.hh  make_tarball.sh  options.cc  options.hh  player.cc  player.hh  playlist.cc  playlist.hh  track.cc  track.hh  version_info.hh
crampf.wrongperms/cb/: Makefile.am  tcalback.hh  value.hh
crampf.wrongperms/commands/: Makefile  Makefile.am  Makefile.in  addpath.cc  addpath.hh  addplayer.cc  addplayer.hh  autocommand.cc  autocommand.hh  calldef.cc  calldef.hh  case.cc  case.hh  clean.cc  clean.hh  commands.hh  commands.sh  define.cc  define.hh  echo.cc  exit.hh  filename.cc  filename.hh  generatetitles.cc  generatetitles.hh  help.cc  help.hh  info.cc  info.hh  jump.cc  jump.hh  kill.cc  kill.hh  listtracks.cc  listtracks.hh  loadnfilter.cc  loadnfilter.hh  loadpfilter.cc  loadpfilter.hh  loadplaylist.cc  (+49 more)
crampf.wrongperms/iosubsys/: Makefile.am  input.cc  input.hh  mainloop.cc  output.cc  output.hh  readlineinterface.cc  readlineinterface.hh  stdout.hh  tcpio.cc  tcpio.hh  terminal.cc  terminal.hh
crampf.wrongperms/player/: Makefile.am  genplayer.hh  player-interface.cc  player-interface.hh
crampf.wrongperms/player/backends/execplayer/: execplayer.cc  execplayer.hh
crampf.wrongperms/player/stdplayer/: stdplayer.cc
crampf.wrongperms/util/: Makefile  Makefile.am  Makefile.in  kill_family.c  kill_family.h  regex.cc  regex.hh
crampf/commands/: Makefile  Makefile.am  addpath.cc  addpath.hh  autocommand.cc  calldef.cc  calldef.hh  case.cc  case.hh  clean.cc  commands.hh  define.cc  define.hh  echo.cc  echo.hh  exit.cc  exit.hh  filename.cc  filename.hh  generatetitles.cc  generatetitles.hh  help.cc  help.hh  info.cc  info.hh  jump.cc  jump.hh  kill.cc  kill.hh  listtracks.cc  listtracks.hh  loadnfilter.cc  loadnfilter.hh  loadpfilter.cc  loadpfilter.hh  loadplaylist.cc  loadplaylist.hh  loop.cc  loop.hh  map.cc  (+46 more)
crampf/iosubsys/: Makefile.am  input.cc  input.hh  mainloop.cc  mainloop.hh  output.cc  output.hh  readlineinterface.cc  readlineinterface.hh  stdout.cc  terminal.cc  terminal.hh
crampf/player/: genplayer.hh  player-interface.cc  player-interface.hh
crampf/player/backends/: Makefile.am
crampf/player/backends/execplayer/: Makefile.am  execplayer.cc  execplayer.hh
crampf/player/stdplayer/: Makefile.am  stdplayer.cc  stdplayer.hh
crampf/util/: Makefile.am  Makefile.in  kill_family.c  regex.cc  regex.hh
