dnl Process this file with autoconf to produce a configure script.
AC_INIT(crampf.cc)
AM_INIT_AUTOMAKE(crampf,0.1.124a)
AM_CONFIG_HEADER(config.h)

dnl Makefile sets all needed CXXFLAGS
CXXFLAGS=

AC_ARG_ENABLE(debug,
[  --enable-debug	Turn on debugging],
[case "${enableval}" in
    yes) CXXFLAGS="${CXXFLAGS} -g"
	 dnl CPPFLAGS="${CPPFLAGS} -Wall"
	 AC_DEFINE(DEBUG)
	 ;;
    no)	 AC_DEFINE(NODEBUG)
	;;
    *) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
esac],AC_DEFINE(NODEBUG))

dnl Checks for programs.
AC_LANG_CPLUSPLUS
AC_PROG_CC
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_INSTALL
AC_PROG_RANLIB

dnl Checks for libraries.
dnl Replace `main' with a function in -lreadline:
AC_CHECK_LIB(termcap, tgetnum,,exit 1)
AC_CHECK_LIB(readline, readline,,exit 1)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(map vector string stack fcntl.h unistd.h getopt.h math.h regex.h signal.h stdio.h sys/stat.h sys/types.h wait.h termios.h time.h readline/readline.h readline/history.h,,exit 1)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

AC_CHECK_PROG(HAS_PLAYER_AMP,amp,yes,no)
if test "$HAS_PLAYER_AMP" = "no" ; then
    AC_MSG_RESULT( [
MP3-Player amp not found! See README for details on using another Player
] )
    sleep 2
fi
AC_CHECK_PROG(HAS_AUMIX,aumix,yes,no)
if test "$HAS_AUMIX" = "no" ; then
    AC_MSG_RESULT( [
Aumix not found. No volume setting will be possible
] )
    sleep 2
fi
AC_CHECK_PROG(HAS_MP3INFO,mp3info,yes,no)
if test "$HAS_AUMIX" = "no" ; then
    AC_MSG_RESULT( [
mp3info not found. ID3-Tag support will not work
] )
    sleep 2
fi

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(regcomp strerror readline)

AC_OUTPUT(util/Makefile Makefile commands/Makefile cb/Makefile player/Makefile player/stdplayer/Makefile, echo timestamp > stamp-h)
