dnl Process this file with autoconf to produce a configure script.
AC_INIT(crampf.cc)
AM_INIT_AUTOMAKE(crampf,0.130a)
AM_CONFIG_HEADER(config.h)

dnl Makefile sets all needed CXXFLAGS
CXXFLAGS=

AC_ARG_ENABLE(debug,
[  --enable-debug	Turn on debugging],
[case "${enableval}" in
    yes) CXXFLAGS="${CXXFLAGS} -g"
	 CPPFLAGS="${CPPFLAGS} -Wall"
	 AC_DEFINE(DEBUG)
	 ;;
    no)	 AC_DEFINE(NODEBUG)
	;;
    *) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
esac],AC_DEFINE(NODEBUG))

dnl Checks for programs.
AC_LANG_CPLUSPLUS
AC_PROG_CC
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_INSTALL
AC_PROG_RANLIB

dnl Checks for libraries.
dnl Replace `main' with a function in -lreadline:
AC_CHECK_LIB(termcap, tgetnum,,exit 1)
AC_CHECK_LIB(readline, readline,,exit 1)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(map vector string stack fcntl.h unistd.h getopt.h math.h regex.h signal.h stdio.h sys/stat.h sys/types.h wait.h termios.h time.h readline/readline.h readline/history.h,,exit 1)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

AC_CHECK_PROGS(PLAYER_CMD,madplay alsaplayer mpg321 amp mpg123,None)
if test "${PLAYER_CMD}" != "None" ; then
    AC_DEFINE_UNQUOTED(PLAYER_CMD,"${PLAYER_CMD}")
    if "${PLAYER_CMD}" = "mpg123" ; then
	AC_DEFINE(PLAYER_CMD_ARGS,"-q")
    else
	AC_DEFINE(PLAYER_CMD_ARGS,"")
    fi
else
    AC_MSG_RESULT( [No supported mp3 player found!] )
    exit 1
fi
AC_CHECK_PROGS(MIXER_CMD,aumix,None)
if test "${MIXER_CMD}" != "None" ; then
    AC_DEFINE_UNQUOTED(MIXER_CMD,"${MIXER_CMD}")
fi
AC_CHECK_PROGS(MP3INFO_CMD,mp3info,None)
if test "${MP3INFO_CMD}" != "None" ; then
    AC_DEFINE_UNQUOTED(MP3INFO_CMD,"${MP3INFO_CMD}")
    AC_DEFINE(MP3INFO_CMD_ARGS,"-F 2")
fi
LIBS_BAK=${LIBS}
LIBS="${LIBS} -lz"
HAS_LIBID3TAG=no
AC_CHECK_LIB(id3tag,id3_tag_new,
    AC_DEFINE(LIBID3TAG)
    HAS_LIBID3TAG=yes
    LIBS="${LIBS} -lid3tag",
    LIBS=${LIBS_BAK}
)

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(regcomp strerror readline)

AC_OUTPUT(util/Makefile Makefile commands/Makefile cb/Makefile player/Makefile player/stdplayer/Makefile, echo timestamp > stamp-h)

AC_MSG_RESULT( [
] )

AC_MSG_RESULT( [MP3-Player      : ${PLAYER_CMD}] )
AC_MSG_RESULT( [Mixer program   : ${MIXER_CMD}] )
if test "${HAS_LIBID3TAG}" = "yes"; then
    AC_MSG_RESULT( [ID3 Support     : libid3tag] )
else
    AC_MSG_RESULT( [ID3 Support     : ${MP3INFO_CMD}] )
fi
