dnl Process this file with autoconf to produce a configure script.
AC_INIT(crampf.cc)
AM_INIT_AUTOMAKE(crampf,0.157a)
AM_CONFIG_HEADER(config.h)

dnl Makefile sets all needed CXXFLAGS
dnl CXXFLAGS=

AC_ARG_ENABLE(profile,
[  --enable-profile	Turn on profiling],
[case "${enableval}" in
    yes) CXXFLAGS="${CXXFLAGS} -pg"
	 ;;
    no)	;;
    *) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
esac],)

AC_ARG_ENABLE(debug,
[  --enable-debug	Turn on debugging],
[case "${enableval}" in
    yes) CXXFLAGS="${CXXFLAGS} -g"
	 CPPFLAGS="${CPPFLAGS} -Wall"
	 AC_DEFINE(DEBUG)
	 ;;
    no)	 AC_DEFINE(NODEBUG)
	;;
    *) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
esac],AC_DEFINE(NODEBUG))

AC_ARG_ENABLE(static,
[ --enable-static	generate static binary],
[case "${enableval}" in
    yes) LDFLAGS="${LDFLAGS} -static"
	LINK_STATIC=yes
	;;
    no) LINK_STATIC=no
	;;
    *) AC_MSG_ERROR(bad value ${enableval} for --enable-static) ;;
esac],LINK_STATIC=no)

dnl Checks for programs.
AC_LANG_CPLUSPLUS
AC_PROG_CC
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_INSTALL
AC_PROG_RANLIB

dnl Checks for libraries.
dnl Replace `main' with a function in -lreadline:
AC_CHECK_LIB(termcap, tgetnum,,exit 1)
AC_CHECK_LIB(readline, readline,,exit 1)
AC_CHECK_FUNCS(rl_completion_matches)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(map vector string stack fcntl.h unistd.h getopt.h math.h regex.h signal.h stdio.h sys/stat.h sys/types.h wait.h termios.h time.h readline/readline.h readline/history.h,,exit 1)

AC_CHECK_PROGS(MIXER_CMD,aumix,None)
if test "${MIXER_CMD}" != "None" ; then
    AC_DEFINE_UNQUOTED(MIXER_CMD,"${MIXER_CMD}")
fi
AC_CHECK_PROGS(MP3INFO_CMD,mp3info,None)
if test "${MP3INFO_CMD}" != "None" ; then
    AC_DEFINE_UNQUOTED(MP3INFO_CMD,"${MP3INFO_CMD}")
    AC_DEFINE(MP3INFO_CMD_ARGS,"-F 2")
fi
LIBS_BAK=${LIBS}
LIBS="${LIBS} -lz"
HAS_LIBID3TAG=no
AC_CHECK_LIB(id3tag,id3_tag_new,
    AC_DEFINE(LIBID3TAG)
    HAS_LIBID3TAG=yes
    LIBS="${LIBS} -lid3tag",
    LIBS=${LIBS_BAK}
)

test "${HAS_LIBID3TAG}" = "yes" -a "${LINK_STATIC}" = "yes" && LIBS="${LIBS} -lz"

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(regcomp strerror readline)

AC_CHECK_FILE(/dev/sndstat,AC_DEFINE(HAVE_DEV_SNDSTAT))
AC_CHECK_FILE(/proc/$$/stat,AC_DEFINE(HAVE_PROC_STAT))

AC_OUTPUT(util/Makefile Makefile commands/Makefile cb/Makefile player/Makefile player/backends/Makefile player/backends/execplayer/Makefile iosubsys/Makefile, echo timestamp > stamp-h)

AC_MSG_RESULT( [
] )

if type madplay >/dev/null 2>&1 ||
	type alsaplayer >/dev/null 2>&1 ||
	type mpg321 >/dev/null 2>&1 ||
	type amp >/dev/null 2>&1 ||
	type mpg123 >/dev/null 2>&1 ; then
    echo "MP3-Player      : at least one supported mp3player found!"
else
    cat <<-EOF
	MP3-Player      : WARNING: No supported mp3-player found!
	You have to add support for your favorite player with addplayer command,
	or install one of the following: madplay, alsaplayer, mpg321, amp, mpg123
EOF
fi
AC_MSG_RESULT( [Mixer program   : ${MIXER_CMD}] )
if test "${HAS_LIBID3TAG}" = "yes"; then
    AC_MSG_RESULT( [ID3 Support     : libid3tag] )
else
    AC_MSG_RESULT( [ID3 Support     : ${MP3INFO_CMD}] )
fi
